# solid_principles

./: pyproject.toml
src/solid_principles/dependency_inversion/: correct.py  violation.py
src/solid_principles/interface_segregation/: correct.py  violation.py
src/solid_principles/liskov_substitution/: correct.py  violation.py
src/solid_principles/open_closed/: correct.py  violation.py
src/solid_principles/single_responsibility/: correct.py  violation.py
